--- a/index.html
+++ b/index.html
@@ -9,6 +9,53 @@
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet" >
 		</head>
 		<body>
-			<p>Hello world</p>
+			<header>
+				<span>slideshare</span>
+				<input type="search">
+				<button>upload</button>
+				<button><img src="images/hd-icn.svg" alt=""></button>
+				<img src="images/avatar.png" alt="">
+			</header>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Leadership</a></li>
+					<li><a href="#">Techology</a></li>
+					<li><a href="#">Education</a></li>
+					<li><a href="#">Marketing</a></li>
+					<li><a href="#">Design</a></li>
+					<li><a href="#">More Topics</a></li>
+				</ul>
+			</nav>
+			<article>
+				<section>
+					<h1>Create Your First SlideShare</h1>
+					<p>Share a fun visual of your professional journey with just a click</p>
+					<button>Create Now</button>
+					<button>No thanks</button>
+					<img src="images/hills-mobile-scr-1x.png" alt="mobile-pic">
+					<img src="images/hills-browser-scr-1x.png" alt="mobile-pic">
+					<img src="images/hills-tablet-scr-1x.png" alt="mobile-pic">
+				</section>
+				<section>
+					<p>Get a new look at your key career milestones and share your Professional Journey with others</p>
+					<ul>
+						<li>
+							<p>Connect via Linkedln</p>
+							<p>to automatically input your data</p>
+						</li>
+						<li>
+							<p>Pick a Template</p>
+							<p>of your choice</p>
+						</li>
+						<li>
+							<p>Publish Your Journey</p>
+							<p>to SlideShare</p>
+						</li>
+					</ul>
+					<button>Create Now</button>
+				</section>
+			</article>
+			<footer>Linkedln Corporation &#169 2015</footer>
 		</body>
 	</html>
