roughly implement header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet" >
 		</head>
 		<body>
-			<header>
-				<span>slideshare</span>
-				<input type="search">
-				<button>upload</button>
-				<button><img src="images/hd-icn.svg" alt=""></button>
-				<img src="images/avatar.png" alt="">
+			<header class="clearfix">
+				<div class="branding">
+					<img src="images/ios_icon.png" alt="branding-pic">
+					slideshare
+				</div>
+				<span class="v-divider"></span>
+				<input type="text" placeholder="Search">
+				<span class="right buttons">
+					<button>upload</button>
+					<button><img src="images/hd-icn.svg" alt=""></button>
+					<span><img src="images/avatar.png" alt=""></span>
+				</span>
+
 			</header>
 			<nav>
 				<ul>
