--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 			</header>
 			<nav>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Leadership</a></li>
-					<li><a href="#">Techology</a></li>
-					<li><a href="#">Education</a></li>
-					<li><a href="#">Marketing</a></li>
-					<li><a href="#">Design</a></li>
-					<li><a href="#">More Topics</a></li>
+				<ul class="nav clearfix">
+					<li class="left"><a href="#">Home</a></li>
+					<li class="left"><a href="#">Leadership</a></li>
+					<li class="left"><a href="#">Techology</a></li>
+					<li class="left"><a href="#">Education</a></li>
+					<li class="left"><a href="#">Marketing</a></li>
+					<li class="left"><a href="#">Design</a></li>
+					<li class="left"><a href="#">More Topics</a></li>
 				</ul>
 			</nav>
 			<article>
