--- a/index.html
+++ b/index.html
@@ -50,21 +50,24 @@
 				</section>
 				<section class="intro">
 					<p class="brief">Get a new look at your key career milestones and share your Professional Journey with others</p>
-					<ul>
-						<li>
+					<div class="h-divider"></div>
+					<ul class="steps clearfix">
+						<li class="step left">
 							<p>Connect via Linkedln</p>
 							<p>to automatically input your data</p>
 						</li>
-						<li>
+						<li class="step left">
 							<p>Pick a Template</p>
 							<p>of your choice</p>
 						</li>
-						<li>
+						<li class="step left">
 							<p>Publish Your Journey</p>
 							<p>to SlideShare</p>
 						</li>
 					</ul>
-					<button>Create Now</button>
+					<div class="create">
+						<button><img src="images/linkedin-logo-isolated.png">Create Now</button>
+					</div>
 				</section>
 			</article>
 			<footer>Linkedln Corporation &#169 2015</footer>
